# num-prime

./: .gitignore  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/benches/: bench.rs
benches/: bench.rs
examples/: divisor_sigma.rs  find_lucky_primes.rs  find_mersenne_primes.rs  prime_omega.rs  profile_factorization.py  profile_factorization.rs
src/: bit_iter.rs  buffer.rs  factor.rs  integer.rs  lib.rs  mint.rs  nt_funcs.rs  primality.rs  rand.rs  tables.rs  traits.rs
