[package]
name = "num-prime"
version = "0.0.4"
edition = "2018"

repository = "https://github.com/cmpute/num-prime"
keywords = ["math", "mathematics", "primes", "number-theory"]
license = "Apache-2.0"
description = """
`num-prime` is based on `num` and extends it with prime related utilities.
It support integer modular arithmetics and various number theoretic functions with arbitrary precision.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.14"
bitvec = "0.22.3"
rand = "0.8.4"
