[package]
name = "num-prime"
version = "0.1.0"
edition = "2018"

repository = "https://github.com/cmpute/num-prime"
keywords = ["mathematics", "primes", "number-theory", "bigint", "num"]
categories = ["cryptography", "science", "algorithms"]
documentation = "https://docs.rs/num-prime"
license = "Apache-2.0"
description = """
`num-prime` is based on `num` and extends it with plenty of prime related utilities.
It supports primality test, factorization and various number theoretic functions with arbitrary precision.
"""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
num-traits = "0.2.14"
num-modular = "0.0.2"
bitvec = "0.22.3"
rand = "0.8.4"

[dependencies.num-bigint]
optional = true
version = "0.4.3"
default-features = false

[features]
big-table = []
