[package]
name = "num-prime"
version = "0.3.0"
edition = "2018"

repository = "https://github.com/cmpute/num-prime"
keywords = ["mathematics", "primes", "number-theory", "bigint", "num"]
categories = ["cryptography", "science", "algorithms"]
documentation = "https://docs.rs/num-prime"
license = "Apache-2.0"
description = """
Generic and optimized primality test, factorization and various number theoretic functions with arbitrary precision based on `num`.
"""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
num-traits = "0.2.14"
num-modular = "0.4.0"
bitvec = "1.0.0"
rand = "0.8.4"
lru = "0.7.2"
either = "1.6.1"

[dependencies.num-bigint]
optional = true
version = "0.4.3"
features = ["rand"]

[features]
default = ['big-table', 'big-int']
big-table = []
big-int = ['num-bigint', 'num-modular/num-bigint']

[workspace]
members = [
  "bench",
]

[package.metadata.docs.rs]
all-features = true
