[package]
name = "num-prime-bench"
version = "0.0.0"
publish = false
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
num-bigint = "0.4"
num-prime = { path = ".." }
criterion = "0.3"
rand = "0.8"

num-primes = { version = "0.3.0", optional = true }
primal-check = "0.3.1"
number-theory = "0.0.6"
is_prime = "2.0.7"

[features]
default = ["num-primes"]
